--- a/Python_literals.ipynb
+++ b/Python_literals.ipynb
@@ -95,13 +95,78 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# print(5 + 2 - 2)\n",
+        "5\n",
+        "\n",
+        "print(5 / 2)\n",
+        "2.5\n",
+        "\n",
+        "print(6 // 2) # // integer division\n",
+        "3\n",
+        "\n",
+        "print(2. * 3)\n",
+        "6.0\n",
+        "\n",
+        "print(2 < 4)\n",
+        "True\n",
+        "\n",
+        "print(2 >= 2)\n",
+        "True\n",
+        "\n",
+        "print(\"Hello\"+\"World\")\n",
+        "\"HelloWorld\"\n",
+        "print(\"bla\" * 3)\n",
+        "\"blablabla\"\n",
+        "\n",
+        "print(2 * 3 ** 3)\n",
+        "54\n",
+        "\n",
+        "print(5 * 25 // 13 + 100 / 2 % 13 // 2)\n",
+        "14\n",
+        "\n",
+        "print(2 * 3 % 5)\n",
+        "1\n",
+        "\n",
+        "print((2 % -4), (2 % 4), (2 ** 3 ** 2))\n",
+        "(-2,2,512)"
       ],
       "metadata": {
-        "id": "tLQh-A7Kt70H"
+        "id": "tLQh-A7Kt70H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b56b337d-308e-4ba8-edf4-a6e0f470055d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5\n",
+            "3\n",
+            "6.0\n",
+            "True\n",
+            "True\n",
+            "HelloWorld\n",
+            "blablabla\n",
+            "54\n",
+            "14.0\n",
+            "1\n",
+            "-2 2 512\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(-2, 2, 512)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,9 +219,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Write your code here"
-      ],
+      "source": [],
       "metadata": {
         "id": "kLoyOaLLLnSK"
       },
@@ -184,13 +247,28 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "5.0"
       ],
       "metadata": {
-        "id": "iJH2iRokL14f"
+        "id": "iJH2iRokL14f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8eaf1d36-5eb9-4e3b-aa35-993926441666"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -214,6 +292,15 @@
       "metadata": {
         "id": "DqRqRrNsMPRp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZgozxmtBZYsX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
