--- a/Python_literals.ipynb
+++ b/Python_literals.ipynb
@@ -95,13 +95,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# print(5 + 2 - 2)\n",
+        "print(5 + 2 - 2)\n",
         "5\n",
         "\n",
         "print(5 / 2)\n",
         "2.5\n",
         "\n",
-        "print(6 // 2) # // integer division\n",
+        "print(6 // 2)\n",
         "3\n",
         "\n",
         "print(2. * 3)\n",
@@ -115,34 +115,105 @@
         "\n",
         "print(\"Hello\"+\"World\")\n",
         "\"HelloWorld\"\n",
+        "\n",
         "print(\"bla\" * 3)\n",
         "\"blablabla\"\n",
+        "print(5 + 2 - 2)\n",
+        "print(5)\n",
+        "\n",
+        "print(5 / 2)\n",
+        "print(2.5)\n",
+        "\n",
+        "print(6 // 2)\n",
+        "print(3)\n",
+        "\n",
+        "print(2. * 3)\n",
+        "print(6.0)\n",
+        "\n",
+        "print(2 < 4)\n",
+        "print(True)\n",
+        "\n",
+        "print(2 >= 2)\n",
+        "print(True)\n",
+        "\n",
+        "print(\"Hello\"+\"World\")\n",
+        "print(\"HelloWorld\")\n",
+        "\n",
+        "print(\"bla\" * 3)\n",
+        "print(\"blablabla\")\n",
         "\n",
         "print(2 * 3 ** 3)\n",
-        "54\n",
+        "print(2 * 27) #= 54\n",
         "\n",
         "print(5 * 25 // 13 + 100 / 2 % 13 // 2)\n",
+        "print(14)\n",
+        "\n",
+        "print(2 * 3 % 5)\n",
+        "print(1)\n",
+        "\n",
+        "print((2 % -4), (2 % 4), (2 ** 3 ** 2))\n",
+        "print(-2, 2, 512)\n",
         "14\n",
         "\n",
         "print(2 * 3 % 5)\n",
         "1\n",
+        "print(5 + 2 - 2)\n",
+        "print(5)\n",
+        "\n",
+        "print(5 / 2)\n",
+        "print(2.5)\n",
+        "\n",
+        "print(6 // 2)\n",
+        "print(3)\n",
+        "\n",
+        "print(2. * 3)\n",
+        "print(6.0)\n",
+        "\n",
+        "print(2 < 4)\n",
+        "print(True)\n",
+        "\n",
+        "print(2 >= 2)\n",
+        "print(True)\n",
+        "\n",
+        "print(\"Hello\"+\"World\")\n",
+        "print(\"HelloWorld\")\n",
+        "\n",
+        "print(\"bla\" * 3)\n",
+        "print(\"blablabla\")\n",
+        "\n",
+        "print(2 * 3 ** 3)\n",
+        "print(2 * 27) #= 54\n",
+        "\n",
+        "print(5 * 25 // 13 + 100 / 2 % 13 // 2)\n",
+        "print(14)\n",
+        "\n",
+        "print(2 * 3 % 5)\n",
+        "print(1)\n",
         "\n",
         "print((2 % -4), (2 % 4), (2 ** 3 ** 2))\n",
-        "(-2,2,512)"
+        "print(-2, 2, 512)\n",
+        "\n",
+        "print(2 * 3 % 5)\n",
+        "print(1)\n",
+        "\n",
+        "print((2 % -4), (2 % 4), (2 ** 3 ** 2))\n",
+        "print(-2, 2, 512)"
       ],
       "metadata": {
         "id": "tLQh-A7Kt70H",
+        "collapsed": true,
+        "outputId": "8636be23-2841-4063-ad49-b365f3b61732",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b56b337d-308e-4ba8-edf4-a6e0f470055d"
+        }
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "5\n",
             "2.5\n",
             "3\n",
             "6.0\n",
@@ -150,23 +221,71 @@
             "True\n",
             "HelloWorld\n",
             "blablabla\n",
+            "5\n",
+            "5\n",
+            "2.5\n",
+            "2.5\n",
+            "3\n",
+            "3\n",
+            "6.0\n",
+            "6.0\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "HelloWorld\n",
+            "HelloWorld\n",
+            "blablabla\n",
+            "blablabla\n",
+            "54\n",
             "54\n",
             "14.0\n",
+            "14\n",
             "1\n",
+            "1\n",
+            "-2 2 512\n",
+            "-2 2 512\n",
+            "1\n",
+            "5\n",
+            "5\n",
+            "2.5\n",
+            "2.5\n",
+            "3\n",
+            "3\n",
+            "6.0\n",
+            "6.0\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "HelloWorld\n",
+            "HelloWorld\n",
+            "blablabla\n",
+            "blablabla\n",
+            "54\n",
+            "54\n",
+            "14.0\n",
+            "14\n",
+            "1\n",
+            "1\n",
+            "-2 2 512\n",
+            "-2 2 512\n",
+            "1\n",
+            "1\n",
+            "-2 2 512\n",
             "-2 2 512\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(-2, 2, 512)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xo50zZbPTVht"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -219,12 +338,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "type(\"Hello\")\n",
+        "# A word or sentence\n",
+        "type(1+\"2\")\n",
+        "# Error (a number and a word cannot be added together)\n",
+        "type('A')\n",
+        "# A single letter\n",
+        "type(500)\n",
+        "# A whole number\n",
+        "type(True)\n",
+        "# A yes-or-no Value\n",
+        "type(\"False\")\n",
+        "# A word, not a true-or-false value\n",
+        "type('A')\n",
+        "A single letter\n",
+        "type(500)\n",
+        "A whole number\n",
+        "type(True)\n",
+        "A yes-or-no value\n",
+        "type(\"False\")\n",
+        "A word, not a true-or-false value"
+      ],
       "metadata": {
-        "id": "kLoyOaLLLnSK"
+        "id": "kLoyOaLLLnSK",
+        "outputId": "9f2e3e96-7672-4b0f-a139-69175b0657ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-19-37f9b0aa91f9>, line 14)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-37f9b0aa91f9>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    A single letter\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -251,12 +406,12 @@
       ],
       "metadata": {
         "id": "iJH2iRokL14f",
+        "outputId": "37d2ed95-ea3c-428f-89c2-f9fc4a064b9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8eaf1d36-5eb9-4e3b-aa35-993926441666"
+        }
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +421,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -294,15 +449,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZgozxmtBZYsX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Answer here"
@@ -323,13 +469,28 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "5.0"
       ],
       "metadata": {
-        "id": "oyX3LQADM4IY"
+        "id": "oyX3LQADM4IY",
+        "outputId": "d80b7621-9485-4aeb-df8c-aaaa78c7f1a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,6 +510,19 @@
       ],
       "metadata": {
         "id": "qfJNpTB5EbY4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Remembering the Rules - It was hard to know which math rule comes first.\n",
+        "Big Numbers - Some numbers were tricky to work with.\n",
+        "Different Signs -Figuring out how minus and divide work together was a little confusing.\n",
+        "Checking My Work - I had to be very careful so I didn’t make a mistake.\n",
+        "Doing It Without Python - Solving it on my own took more time."
+      ],
+      "metadata": {
+        "id": "z7Dqcx5tatjP"
       }
     }
   ]
