--- a/Variables.ipynb
+++ b/Variables.ipynb
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6RKggasqIqbr",
-        "outputId": "e592377f-9af5-4372-a28d-cec18af588d2"
+        "outputId": "cc4dc020-6c14-4dc9-f089-274f4c84959d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "nG3zhLAuJOdz"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -128,32 +128,44 @@
         "print(hex(id(var1)))"
       ],
       "metadata": {
-        "id": "mjwxa33VJVix"
+        "id": "mjwxa33VJVix",
+        "outputId": "d2c2723d-be48-4878-c911-05e191b5a954",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0xa40ca8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "var1 = 100\n",
-        "# Check the memory address of var1 again"
+        "# print(id(var1))"
       ],
       "metadata": {
         "id": "rQqjsX6pJafY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# print the memory address of var"
       ],
       "metadata": {
         "id": "bXIAgWixJ97B"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -169,24 +181,24 @@
       "cell_type": "code",
       "source": [
         "var2 = 100\n",
-        "# Write your print statement\n",
+        "# # print(id(var1))\n",
         "# Check the memory address of var2. Did the Python interpreter assign a new memory address or reuse the existing one?"
       ],
       "metadata": {
         "id": "sWuIw2guJ1wK"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# # print the memory address of var"
       ],
       "metadata": {
         "id": "rOt7-7eLKFl_"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -207,7 +219,7 @@
       "metadata": {
         "id": "tecKbG6eKOo1"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -219,7 +231,7 @@
       "metadata": {
         "id": "KOrIVOosKUWD"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -229,15 +241,27 @@
         "# Use the same method as described above to find the addresses of additional characters and complete the table below."
       ],
       "metadata": {
-        "id": "egL18fPSKXfz"
+        "id": "egL18fPSKXfz",
+        "outputId": "783d7231-0577-471f-b495-8e1b12a38ad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0xa4b9e8 0xa4c040\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "| Address in hexadecimal | Char |\n",
+        "*italicized text*| Address in hexadecimal | Char |\n",
         "| ---------------------- | ---- |\n",
         "| #                      |      |\n",
         "| #                      |      |\n",
@@ -289,12 +313,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# x=x+1"
       ],
       "metadata": {
         "id": "Q4Z1wMB_NDNi"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -304,11 +328,11 @@
         "\n",
         "Please troubleshoot the following issue **without using Python**, and explain your reasoning.\n",
         "\n",
-        "a. ```hello = \"hello\"```  \n",
-        "b. ```_var = 100```  \n",
-        "c. ```!var_1 = 200```  \n",
-        "d. ```print = \"print me\"```  \n",
-        "e. ```False = 0```  "
+        "a. ```hello = \"hello\"```  no issue\n",
+        "b. ```_var = 100```  no issue\n",
+        "c. ```!var_1 = 200```  is not used for variable assignment in python\n",
+        "d. ```print = \"print me\"```  print is reserved keyword for python\n",
+        "e. ```False = 0```  no possible fix"
       ],
       "metadata": {
         "id": "V0l5fqK-NJ2n"
@@ -328,7 +352,9 @@
       "source": [
         "## Challenges\n",
         "\n",
-        "Please describe the challenges you faced during the exercise."
+        "Please describe the challenges you faced during the exercise.\n",
+        "\n",
+        "it was hard to know things were wrong without testing them in python. some words, like print and false, cannot be used as names. ive also learned that you cannot put a space in a variable name."
       ],
       "metadata": {
         "id": "xQzjxKdvvbyo"
