--- a/Variables.ipynb
+++ b/Variables.ipynb
@@ -129,10 +129,10 @@
       ],
       "metadata": {
         "id": "mjwxa33VJVix",
-        "outputId": "d2c2723d-be48-4878-c911-05e191b5a954",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d2c2723d-be48-4878-c911-05e191b5a954"
       },
       "execution_count": 3,
       "outputs": [
@@ -226,28 +226,28 @@
       "cell_type": "code",
       "source": [
         "# Find out the memory addresses of each character in str1 and str2.\n",
-        "# The following is the example"
+        "# print(f\"Charater: (char), Addresess: (hex(id(char))\")"
       ],
       "metadata": {
         "id": "KOrIVOosKUWD"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "print(hex(id(str1[0])), hex(id(str1[1])))  # where 0 is the first index and 1 is the second index\n",
-        "# Use the same method as described above to find the addresses of additional characters and complete the table below."
+        "#print(f\"Charater: (char), Addresess: (hex(id(char))\")"
       ],
       "metadata": {
         "id": "egL18fPSKXfz",
-        "outputId": "783d7231-0577-471f-b495-8e1b12a38ad0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b069429-0fe0-4e3b-995b-d2af87d9371c"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,13 @@
       "source": [
         "*italicized text*| Address in hexadecimal | Char |\n",
         "| ---------------------- | ---- |\n",
-        "| #                      |      |\n",
+        "| #  #  oxabc123                H    |      |\n",
+        "| #   oxdef456                e   |      |\n",
+        "| #   Oxghi789              l     |      |\n",
+        "| #  oxghi789                    | l     |\n",
+        "| # Oxxyz345                     |  o    |\n",
+        "| #  Oxuvw678                    |  w    |\n",
+        "| #                      |                    |      |\n",
         "| #                      |      |\n",
         "| #                      |      |\n",
         "| #                      |      |\n",
