--- a/Your_very_first_Python_code.ipynb
+++ b/Your_very_first_Python_code.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,13 +69,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# print(\"All the world's a stage,\")\n",
+        "# print(\"All the world's a stage,\")\n",
+        "print(\"And all the men and women merely players:\")\n",
+        "print(\"They have their exits and their entrances;\")\n",
+        "print(\"And one man in his time plays many parts,\")"
       ],
       "metadata": {
-        "id": "tLQh-A7Kt70H"
+        "id": "tLQh-A7Kt70H",
+        "outputId": "d3a61f1b-1e79-48f9-b034-cf0e8e912424",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "And all the men and women merely players:\n",
+            "They have their exits and their entrances;\n",
+            "And one man in his time plays many parts,\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -90,12 +107,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# print(\"All the world's a stage,\\nAnd all the men and women merely players:\\nThey have their exits and their entrances;\\nAnd one man in his time plays many parts,\\nHis acts being seven ages.\")\n"
       ],
       "metadata": {
         "id": "Z3US7bf6u5lp"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -111,7 +128,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your response here\n"
+        "print(\"127\",\"0\",\"0\",\"1\",sep=\".\")\n",
+        "127.0.0.1\n",
+        "\n",
+        "The sep=\".\" tells Python to put a dot (.) between each value instead of a space. So, the numbers are joined with dots, creating an IP address format.\n"
       ],
       "metadata": {
         "id": "FrdFrBujEDB9"
@@ -129,7 +149,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your response here"
+        "Use flush=True when you want to see the words right away on the screen. This is useful for countdowns, progress bars, or live updates.\n",
+        "\n",
+        "Use flush=False when it is okay to wait before showing the words. This is good for regular messages or reports that do not need to appear instantly.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "28PdaQxRDc0H"
@@ -147,20 +172,44 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# The end argument helps decide when the computer shows the words on the screen.\n",
+        "\n",
+        "By default, print() adds a new line (\\n) at the end. This makes the computer show the words right away, like flush=True.\n",
+        "\n",
+        "If you change end=\"\", the computer waits before showing the words. To make it show right away, you use flush=True."
       ],
       "metadata": {
-        "id": "TXRXo2bCvaNA"
+        "id": "TXRXo2bCvaNA",
+        "outputId": "2e7a1aff-1e67-4344-dcc2-dcc90f57bfa5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-13-0a4c6776c6a3>, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-0a4c6776c6a3>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    By default, print() adds a new line (\\n) at the end. This makes the computer show the words right away, like flush=True.\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "## Challenges\n",
         "\n",
-        "Please describe the challenges you faced during the exercise."
+        "Waiting to See the Words - Sometimes, the computer does not show the words right away because it waits for more things to print.\n",
+        "\n",
+        "Needing Fast Updates -If you are showing a timer or a loading bar, you want the words to appear right away.\n",
+        "\n",
+        "Forgetting to Use flush=True -If the computer is waiting too long, you may need to tell it to show the words now by using flush=True.\n",
+        "\n",
+        "Changing end Can Confuse - If you change end=\"\", the computer might not show the words until later. You may need to add flush=True to fix this."
       ],
       "metadata": {
         "id": "xQzjxKdvvbyo"
